# TaskAux

./: .gitignore  CMakeLists.txt  CROW_PROJECT_FIRST.kdev4  README.md
.kdev4/: CROW_PROJECT_FIRST.kdev4
include/: db.hpp
src/: db.cpp  main.cpp
